GA: Code coverage clash med argLine argument maven-surefire-plugin (#848)
* GA: Code coverage clash med argLine argument maven-surefire-plugin?

* Legger til @{argLine} – late property evaluation